Too tired to go on

--- a/lecture_notes/src/macros.tex
+++ b/lecture_notes/src/macros.tex
@@ -2,18 +2,20 @@
 #include "letters.tex"
 #include "theorems.tex"
 
+% sourced from Arun Debray <coltongrainger, 2019-04-14> %
+
 % Unfortunately, this has to be placed before loading the cleveref package, so it's
 % in packages.tex.
 % \numberwithin{equation}{section}
-%
+
 % This could be considered a stylistic choice, but works much better with how I use
 % subsections as subject changes in a lecture.
 \setcounter{tocdepth}{1}
-%
+
 % These can be changed downstream
 \newcommand{\term}{\emph} % e.g. "The \term{trace} is defined to be..."
 \newcommand{\latin}{\textit} % e.g. \latin{per se}, \latin{mutatis mutandis}
-%
+
 % Often, I find myself making a theorem, definition, etc. that's purely a combination
 % of statements, either bulleted or numbered. In that case, using \hfill typesets each
 % item uniformly. It would probably be best to make this into a custom enumitem
@@ -34,12 +36,10 @@
 	\csname end#3\endcsname
 	\csname end#2\endcsname
 }
-%
+
 % since I find myself using \renewcommand{...}{\operatorname{...}} a lot.
-% possible TODO: also define a starred version?
-% could also define \ProvideMathOperator but I wouldn't use that at all
-\newcommand{\RenewMathOperator}[2]{\renewcommand{#1}{\operatorname{#2}}}
-%
+\newcommand{\renewoperator}[2]{\renewcommand{#1}{\operatorname{#2}}}
+
 % other shortcuts I use for live-TeXing
 \newcommand{\vp}{\varphi}
 \newcommand{\e}{\varepsilon}
@@ -50,70 +50,42 @@
 \newcommand{\many}[2][\dotsb]{#2 #1 #2} % optional argument for kind of dots
 \newcommand{\TFAE}{The following are equivalent}
 \newcommand{\TODO}{\textcolor{red}{TODO}}
-%
+
 % use a longer \mapsto in display math
 \let\shortmapsto\mapsto
 \renewcommand{\mapsto}{\mathchoice{\longmapsto}{\shortmapsto}{\shortmapsto}{\shortmapsto}}
-%
-% Use \ud for things that need additional space, e.g. f(x) dx (in integrals or for
-% differential forms). \d is for things that don't (e.g. after a wedge, or just dx on
-% its own). I would be interested in unifying them.
-% Some packages that I use often (e.g. font packages) overwrite \d, and therefore this
-% class needs to define \d after it's overwritten, which is why I use \AtBeginDocument.
-\AtBeginDocument{
-	\newcommand{\ud}{\,\mathrm{d}}
-	\renewcommand{\d}{\mathrm d}
-	% accepts optional argument for higher derivatives
-	\newcommand{\dfr}[3][]{\frac{\mathrm d^{#1} #2}{\mathrm d #3{}^{#1}}}
-	\newcommand{\@dpfr}[3][]{\frac{\partial^{#1} #2}{\partial #3{}^{#1}}}
-	\newcommand{\@spfr}[3][]{\partial^{#1} #2 / \partial #3{}^{#1}}
-	\newcommand{\pfr}[3][]{\mathchoice{\@dpfr[#1]{#2}{#3}}{\@dpfr[#1]{#2}{#3}}
-		{\@spfr[#1]{#2}{#3}}{\@spfr[#1]{#2}{#3}}}
-	\newcommand{\mixedpfr}[3]{\frac{\partial^2 #1}{\partial #2 \partial #3}}
-}
-%
+
 % This allows \paren{...} to replace \left(...\right) (and similarly for \bkt). For
 % \ang, \set, \abs, and \norm, I find myself using autoexpansion less often.
 % This code, along with some other shortcuts, is duplicated in my problem set template;
 % perhaps I should have them include a common file?
-\DeclarePairedDelimiter\paren{(}{)}
+\def\paren[#1]{\qty(#1)}
 \DeclarePairedDelimiter\ang{\langle}{\rangle}
-\DeclarePairedDelimiter\abs{\lvert}{\rvert}
-\DeclarePairedDelimiter\norm{\lVert}{\rVert}
-\DeclarePairedDelimiter\bkt{[}{]}
-\DeclarePairedDelimiter\set{\{}{\}}
-% Swap paren* and paren, etc., so that the normal version resizes by default.
-% Meanwhile, one can use \paren*[\Big]{...} to customize the size easily.
-\let\oldparen\paren
-\def\paren{\@ifstar{\oldparen}{\oldparen*}}
-\let\oldbkt\bkt
-\def\bkt{\@ifstar{\oldbkt}{\oldbkt*}}
-%
-% This allows a"1 as a shortcut for a^{(1)} and a"{10} as a shortcut for a^{(10)}.
-\ifdefined\noqu@es
-\else
-	\AtBeginDocument{\catcode`\"=13}
-	\catcode`\"=13
-	\newcommand*{"}[1]{^{(#1)}}%
-	\catcode`\"12
-\fi
-%
+\let\oldang\ang
+\def\ang{\@ifstar{\oldang}{\oldpang*}}
+% \def\abs (defined in physics package)
+% \def\norm (defined in physics package)
+\def\bkt[#1]{\qty[#1]}
+\def\set[#1]{\qty{#1}}
+
 % Now, for a bunch of field-specific commands.
 % TODO: document
 % TODO: starred command, perhaps as http://tex.stackexchange.com/a/4388/
 \newcommand{\newoperator}[1]{\expandafter\DeclareMathOperator\csname #1\endcsname{\operatorname{#1}}}
-%
+
 % Algebra
 \newoperator{Ann}
 \newoperator{Aut}
 \newoperator{Cliff}
-\DeclareMathOperator{\chr}{char}
+\newoperator{char}
 \newoperator{coker}
+% det (defined in amsmath)
 \newoperator{End}
 \newoperator{Ext}
 \newoperator{Frac}
 \newoperator{Gal}
 \newoperator{Hom}
+% ker (defined in amsmath)
 \AtBeginDocument{ % some packages redefine this
 	\RenewMathOperator{\Im}{Im} % also complex analysis
 }
@@ -122,15 +94,14 @@
 \newcommand{\rop}{^{\mathrm{op}}} % for the opposite of an algebra or monoid
 \newoperator{rank}
 \newoperator{sign}
-\DeclareMathOperator{\spa}{span}
+\newoperator{span}
 \newoperator{Stab}
+\newoperator{Norm}
 \newoperator{Sym}
-%TODO better name (conflicts w/ circle group)
-%\newcommand{\T}{^{\mathrm T}} % tranpose TODO where does the \! go?
 \newoperator{Tor}
 \newoperator{tr}
 \newcommand{\bl}{\text{--}}
-%
+
 % Algebraic Geometry
 \newoperator{Proj}
 \newoperator{QCoh}
