--- a/ccg-pset-examples/quick_brown_fox.tex
+++ b/ccg-pset-examples/quick_brown_fox.tex
@@ -1,6 +1,6 @@
 % The purpose of this document is to test every aspect of my class file in as concise a manner as possible.
 % TODO a lot of it is missing...
-\documentclass[onesided]{../../ccg-pset}
+\documentclass[onesided]{../ccg-pset}
 
 \course{MATH 6120}
 \psnum{12}
